<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <include layout="@layout/upcheader_info_edifici" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/backgroundunitat" >

        <LinearLayout
            android:id="@+id/unitatTot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/unitatInfo"
                style="@style/unitatCaixa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/edificiTitol"
                    style="@style/unitatTitol"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <ImageView
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="#bbb"
                    android:scaleType="fitXY"
                    android:src="@android:drawable/divider_horizontal_dark" />

                <LinearLayout
                    android:id="@+id/linearLayout1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/edificiInfo1"
                        style="@style/unitatAdress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <ImageView
                        android:id="@+id/edificiImage"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_centerInParent="true"
                        android:layout_weight="1"
                        android:padding="3dp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/unitatContacte"
                style="@style/unitatCaixa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/edificiTelefon"
                    style="@style/unitatNegretaBlau"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" 
                    />

                <ImageView
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/edificiTelfMailSeparator"
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="#bbb"
                    android:scaleType="fitXY"
                    android:src="@android:drawable/divider_horizontal_dark" />

                <TextView
                    android:id="@+id/edificiMail"
                    style="@style/unitatNegretaBlau"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <ImageView
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/edificiMailURLSeparator"
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="#bbb"
                    android:scaleType="fitXY"
                    android:src="@android:drawable/divider_horizontal_dark" />

                <TextView
                    android:id="@+id/edificiURL"
                    style="@style/unitatNegretaBlau"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/unitatEstudis"
                style="@style/unitatCaixaGris"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/edificiGrauTitol"
                    style="@style/unitatNegretaEstudis"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edificiGrauTitol" />

                <LinearLayout
                    android:id="@+id/edificiListGrau"
                    style="@style/unitatLlista"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >
                </LinearLayout>
                  <TextView
                    android:id="@+id/edifici2nCicleTitol"
                    style="@style/unitatNegretaEstudis"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edifici2nCicleTitol" />

                <LinearLayout
                    android:id="@+id/edificiList2nCicle"
                    style="@style/unitatLlista"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >
                </LinearLayout>

             
                <TextView
                    android:id="@+id/edificiDoblesTitol"
                    style="@style/unitatNegretaEstudis"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edificiDoblesTitol" />

                <LinearLayout
                    android:id="@+id/edificiListDobles"
                    style="@style/unitatLlista"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"  >
                </LinearLayout>
                   <TextView
                    android:id="@+id/edificiMastersTitol"
                    style="@style/unitatNegretaEstudis"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edificiMastersTitol" />

                <LinearLayout
                    android:id="@+id/edificiListMasters"
                    style="@style/unitatLlista"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >
                </LinearLayout>
                    
            </LinearLayout>

            <LinearLayout
                android:id="@+id/unitatBotons"
                style="@style/unitatCaixa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/edificiURL"
                    style="@style/unitatNegreta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/comanar" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/unitatHoritzontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center" >

                <LinearLayout
                    android:id="@+id/unitatBotons1"
                    style="@style/unitatCaixaGris"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/edificiURL"
                        style="@style/unitatNoNegreta"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/addcontact" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/unitatBotons2"
                    style="@style/unitatCaixaGris"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/edificiURL"
                        style="@style/unitatNoNegreta"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/compartirubicacio" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>