<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <include layout="@layout/upcheader_info_edifici" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/backgroundunitat" >

        <LinearLayout
            android:id="@+id/campusTot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/campusInfo"
                style="@style/unitatCaixa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/campusTitol"
                    style="@style/unitatTitol"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <ImageView
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="#bbb"
                    android:scaleType="fitXY"
                    android:src="@android:drawable/divider_horizontal_dark" />

                <LinearLayout
                    android:id="@+id/linearLayout1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/campusInfo1"
                        style="@style/unitatAdress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                       />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/campusEstudis"
                style="@style/unitatCaixaGris"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/campusGrauTitol"
                    style="@style/unitatNegretaEstudis"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/campusGrauTitol" />

                <LinearLayout
                    android:id="@+id/campusListGrau"
                    style="@style/unitatLlista"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >
                </LinearLayout>

                <TextView
                    android:id="@+id/campus2nCicleTitol"
                    style="@style/unitatNegretaEstudis"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/campus2nCicleTitol" />

                <LinearLayout
                    android:id="@+id/campusList2nCicle"
                    style="@style/unitatLlista"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/campusBotons1"
                style="@style/unitatCaixa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/campusURL"
                    style="@style/unitatNegreta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/comanar" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/campusHoritzontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center" >

                <LinearLayout
                    android:id="@+id/campusBotons2"
                    style="@style/unitatCaixaGris"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/campusURL"
                        style="@style/unitatNoNegreta"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/compartirubicacio" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>